# centre

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  update-homebrew.yml
src/: app.rs  main.rs  notifications.rs  ticker.rs
src/domain/: enums.rs  item.rs  mod.rs  views.rs
src/input/: handler.rs  mod.rs
src/persistence/: files.rs  metadata.rs  migration.rs  mod.rs  parser.rs  serializer.rs
src/report/: generator.rs  mod.rs  stats.rs
src/ui/: animation_pane.rs  daily_planner_pane.rs  details_pane.rs  done_pane.rs  garden_pane.rs  input_form.rs  journal_pane.rs  keybindings.rs  layout.rs  list_pane.rs  mod.rs  modal.rs  styles.rs
tests/fixtures/: sample_today.md
